# boe-knowledge-graph

./: .env.example  .gitignore  PROJECT.md  docker-compose.prod.yml  docker-compose.yml
adapters/es/: boe.yml
api/: Dockerfile  main.py  pyproject.toml
docs/superpowers/plans/: 2026-06-14-plan-1-foundation.md  2026-06-14-plan-2-ingestion-pipeline.md
docs/superpowers/specs/: 2026-06-13-boe-knowledge-graph-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
neo4j/init/: 01_schema.cypher
nginx/: nginx.conf
ontology/: canonical.yml
pipeline/: Dockerfile  dagster.yaml  pyproject.toml  workspace.yaml
pipeline/pipeline/: __init__.py  partitions.py  resources.py  utils.py
pipeline/pipeline/adapters/: loader.py  models.py
pipeline/pipeline/assets/: bronze.py  minio_init.py
pipeline/pipeline/fetchers/: rest_json.py
pipeline/pipeline/parsers/: html_parser.py
pipeline/tests/pipeline/: conftest.py  test_adapter_models.py  test_html_parser.py  test_rest_json_fetcher.py
scripts/: wait-for-services.sh
