[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.20",
    "qdrant-client>=1.9",
    "elasticsearch>=8.13",
    "redis>=5.0",
    "minio>=7.2",
    "anthropic>=0.28",
    "langgraph>=0.1",
    "pydantic>=2.7",
    "httpx>=0.27",
]
