[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "dagster-postgres>=0.23",
    "neo4j>=5.20",
    "minio>=7.2",
    "deltalake>=0.18",
    "polars>=0.20",
    "pyarrow>=16",
    "qdrant-client>=1.9",
    "elasticsearch>=8.13",
    "redis>=5.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "spacy>=3.7",
    "PyYAML>=6.0",
    "jmespath>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
